Added basic private chat creation dialog.
