# platform/endpoints/api/swagger/restapi/operations/stable/get_account_get_all.go
@@ -1,0 +1,71 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package stable
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+
+	"gochat/platform/endpoints/api/swagger/models"
+)
+
+// GetAccountGetAllHandlerFunc turns a function with the right signature into a get account get all handler
+type GetAccountGetAllHandlerFunc func(GetAccountGetAllParams, *models.Principal) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetAccountGetAllHandlerFunc) Handle(params GetAccountGetAllParams, principal *models.Principal) middleware.Responder {
+	return fn(params, principal)
+}
+
+// GetAccountGetAllHandler interface for that can handle valid get account get all params
+type GetAccountGetAllHandler interface {
+	Handle(GetAccountGetAllParams, *models.Principal) middleware.Responder
+}
+
+// NewGetAccountGetAll creates a new http.Handler for the get account get all operation
+func NewGetAccountGetAll(ctx *middleware.Context, handler GetAccountGetAllHandler) *GetAccountGetAll {
+	return &GetAccountGetAll{Context: ctx, Handler: handler}
+}
+
+/* GetAccountGetAll swagger:route GET /account/get-all stable getAccountGetAll
+
+Endpoint to get a list of all registered users.
+
+*/
+type GetAccountGetAll struct {
+	Context *middleware.Context
+	Handler GetAccountGetAllHandler
+}
+
+func (o *GetAccountGetAll) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewGetAccountGetAllParams()
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		*r = *aCtx
+	}
+	var principal *models.Principal
+	if uprinc != nil {
+		principal = uprinc.(*models.Principal) // this is really a models.Principal, I promise
+	}
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params, principal) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
