# platform/services/account/controller/controller-interface.go
@@ -3,6 +3,7 @@ package controller
 import (
 	"gochat/platform/internal/proto/pb"
 
+	"github.com/golang/protobuf/ptypes/empty"
 	"github.com/golang/protobuf/ptypes/wrappers"
 )
 
@@ -13,4 +14,5 @@ type Controller interface {
 	GetUserByEmail(in *wrappers.StringValue) (*pb.User, error)
 	Login(in *pb.LoginRequest) (*pb.LoginResponse, error)
 	AuthenticateJWT(in *wrappers.StringValue) (*pb.User, error)
+	GetAllUsers(in *empty.Empty) (*pb.UserList, error)
 }
